* GSWeb.framework/GSWConfig.h: Turn GSW/WOLifebeatEnabled off           by default.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18432 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@
 	performSelector: to send undeclared targetForProxy method.
 	([GSWApplication monitoringEnabled]): Forward isMonitorEnabled to
 	class.
+	* GSWeb.framework/GSWConfig.h: Turn GSW/WOLifebeatEnabled off by
+	default.
 
 2004-01-13  David Ayers  <d.ayers@inode.at>
 
