* GSWeb.framework/GSWTemplateParserXML.m: fix to avoid html and 		body tag removing for XML (not XMLHTML) parsing.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18539 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-04   Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWeb.framework/GSWTemplateParserXML.m: fix to avoid html and 
+		body tag removing for XML (not XMLHTML) parsing.
+
 2004-01-18  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GSWApplication.h
