Also add dependancy on GDL2.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18699 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
 	* GSWeb.framework/GNUmakefile: Depend on GDL2 when applicable.
 	* GSWeb.framework/Makefile.preamble.in: Add dependency on 
 	GSANTLER and -baseadd when applicable.
+	Also add dependancy on GDL2.
 	
 2004-02-26  David Ayers  <d.ayers@inode.at>
 
