* GSWeb.framework/GSWDefaultAdaptorThread.m: 	o fix for autoreleasing runDate inr -run: (from 	  S.J.Chun <chunsj@embian.com>)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18755 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-03   Manuel Guesdon <mguesdon@orange-concept.com>
+		
+	* GSWeb.framework/GSWDefaultAdaptorThread.m:
+		o fix for autoreleasing runDate inr -run: (from 
+		S.J.Chun <chunsj@embian.com>)
+	
 2004-03-01   Manuel Guesdon <mguesdon@orange-concept.com>
 		
 	* GSWeb.framework/GSWApplication.m:
