* GSWeb.framework/GNUmakefile: Make WO_HEADER_FILES real         public headers.         * GSWExtensions.framework/GNUmakefile: Ditto.         * GSWeb.framework/Makefile.postamble: Simplify rules for         installing WO_HEADER_FILES.         * GSWExtensions.framework/Makefile.postamble: Ditto.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18825 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-10  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb.framework/GNUmakefile: Make WO_HEADER_FILES real
+	public headers.
+	* GSWExtensions.framework/GNUmakefile: Ditto.
+	* GSWeb.framework/Makefile.postamble: Simplify rules for
+	installing WO_HEADER_FILES.
+	* GSWExtensions.framework/Makefile.postamble: Ditto.
+	
 2004-03-04  David Ayers  <d.ayers@inode.at>
 
 	* config.mak.in: Added EOCONTROL_LIBRARY_NAME, 
