* hello/Hello.m, hello/HelloPage.m, hello/Hello_main.m,         hello/Hello_main.m, hello/Main.m:  Correct include directive.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18830 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	* GSWeb.framework/Makefile.postamble: Simplify rules for
 	installing WO_HEADER_FILES.
 	* GSWExtensions.framework/Makefile.postamble: Ditto.
+
+	* hello/Hello.m, hello/HelloPage.m, hello/Hello_main.m,
+	hello/Hello_main.m, hello/Main.m:  Correct include directive.
 	
 2004-03-04  David Ayers  <d.ayers@inode.at>
 
